--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="src/main.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <h1>Ghibli Stuff</h1>
+        <a href="/index.html">All films</a>
+    </header>
+    <main>
+    list of stuff
+    <ul>
+        <li><a href="/description.html">Some Movie</a> <span>(2019)</span></li>
+    </ul>
+    </main>
+
+    <footer></footer>
     
+<script type="module" src="src/index.js"></script>
 </body>
 </html>
