changed for loop and cleaned up code a bit

--- a/description.html
+++ b/description.html
@@ -12,28 +12,7 @@
         <a href="./index.html">All films</a>
     </header>
     <main>
-        <table>
-            <tr>
-                <th>Title: </th>
-                <td>some title</td>
-            </tr>
-            <tr>
-                <th>Release Date: </th>
-                <td>1548</td>
-            </tr>
-            <tr>
-                <th>Description: </th>
-                <td>description</td>
-            </tr>
-            <tr>
-                <th>Director: </th>
-                <td>director</td>
-            </tr>
-            <tr>
-                <th>RT Score: </th>
-                <td>score</td>
-            </tr>
-        </table>
+        <div id="film-detail"></div>
     </main>
     <footer></footer>
     <script type="module" src="./src/description/description.js"></script>
