--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
         <a href="/index.html">All films</a>
     </header>
     <main>
-    list of stuff
-    <ul>
-        <li><a href="/description.html">Some Movie</a> <span>(2019)</span></li>
-    </ul>
+    <ul id="film-list"></ul>
     </main>
 
     <footer></footer>
